# shortlink

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  RUST_FRONTEND.md  build_frontend.sh  migration_add_clicks.sql  quick-start.sh  schema.sql  wrangler.toml
docs/: analytics.css  analytics.html  analytics.js  app.js  charts.css  config.js  dashboard.css  index.html  url-shortener-frontend-5c131e3c568d0019.js
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  style.css
frontend/src/: api.rs  app.rs  auth.rs  main.rs
frontend/src/components/: charts.rs  dashboard.rs  mod.rs  shortener.rs
frontend/src/pages/: analytics.rs  home.rs  mod.rs
src/: lib.rs
src/models/: mod.rs
src/utils/: mod.rs
