[package]
name = "url-shortener-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "Document", "Location", "Storage", "Navigator", "Clipboard", "Event", "SubmitEvent", "InputEvent", "MouseEvent"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1.0"
base64 = "0.21"
js-sys = "0.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
